# hermes-telegram-overlay

./: .gitignore  README.md  TODO.md  dev-box-deploy-prompt.md  pyproject.toml
deploy/devbox/scripts/: auto_deploy.sh
deploy/devbox/systemd/: hermes-telegram-deploy.service  hermes-telegram-deploy.timer  hermes-telegram.service
deploy/devbox/windows/: Get-HermesTelegramStatus.ps1  Watch-HermesTelegram.ps1
plugins/hermes-telegram-overlay/: __init__.py  plugin.yaml
profiles/dev-macos/: .env.template  SOUL.md  config.template.yaml
profiles/prod-devbox/: .env.template  config.template.yaml
scripts/: bootstrap_env.py  bootstrap_profile.py  render_deploy.py  render_profile.py  status.py
src/hermes_telegram_overlay/: __init__.py  constants.py  deploy.py  dispatch.py  formatting.py  mcp_server.py  model_config.py  plugin.py  profiles.py  sibling.py  tg_history.py
tests/: test_deploy.py  test_model_config.py  test_plugin.py  test_profiles.py  test_sibling.py  test_tg_history.py
